--- a/index.html
+++ b/index.html
@@ -52,51 +52,60 @@
             <ul class="advantages-list">
               <li class="advantages-item advantages-img">
                 <div class="container-advantages">
-                  <h3 class="advantages-item-title">Настоящий городок</h3>
+                  <h3 class="advantages-item-title">Настоящий<br>городок</h3>
                   <b clsss="advantages-numb">— №1 —</b>
-                  <p class=”advantages-description”>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                  <p class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</p>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title features-icon">Жильё</div>
-                  <div class=”advantages-description”>Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
+                  </div>
+                  <div class="advantages-item-title advantages-city">Жильё</div>
+                  <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в кино!</div>
                 </li>
                 <li class="advantages-item">
-                  <div class="advantages-item-title features-icon">Еда</div>
-                  <div class=”advantages-description”>Всегда заказывайте топовый фирменный бургер, вы не
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
+                  </div>
+                  <div class="advantages-item-title advantages-city">Еда</div>
+                  <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</div>
                 </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title features-icon">Сувениры</div>
-                  <div class=”advantages-description”>Не только китайского, но и настоящего местного производства!</div>
+                  <div class="advantages-item-image">
+                    <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
+                  </div>
+                  <div class="advantages-item-title advantages-city">Сувениры</div>
+                  <div class="advantages-description description-city">Не только китайского, но и настоящего местного производства!</div>
                 </li>
               <li class="advantages-item advantages-img advantages-row-reverse">
                 <div class="container-advantages">
-                  <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+                  <h3 class="advantages-item-title">Там есть<br>мост дьявола</h3>
                   <b class="advantages-numb">— №2 —</b>
-                  <p class=”advantages-description”>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                  <p class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</p>
                 </div>
-                <div class="advantages-image-bridge">
+                <div class="advantages-image-city">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title features">Небольшая площадь</div>
+                  <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
                   <div class="advantages-numb">— №3 —</div>
-                  <div class=”advantages-description”>Все достопримечательности находятся очень близко</div>
+                  <div class="advantages-description description-square">Все достопримечательности<br>находятся очень близко</div>
                 </li>
                 <li class="advantages-item color-road">
-                  <div class="advantages-item-title features">Красивая дорога</div>
+                  <div class="advantages-item-title advantages-content">Красивая<br>дорога</div>
                   <div class="advantages-numb">— №4 —</div>
-                  <div class=”advantages-description”>Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+                  <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!</div>
                 </li>
                 <li class="advantages-item color-bloc">
-                  <div class="advantages-item-title features">Мало туристов</div>
+                  <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
                   <div class="advantages-numb">— №5 —</div>
-                  <div class=”advantages-description”>Большинство едет в Гранд Каньон и толпится там</div>
+                  <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там</div>
                 </li>
             </ul>
           </section>
