--- a/catalog.html
+++ b/catalog.html
@@ -134,11 +134,15 @@
               <span class="visually-hidden">Показать список</span>
             </a>
           </div>
+          <div class="wrapper">
           <ul class="product-list">
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card-image-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-1.jpg" width="300" height="211"
                   alt="Вид на звездное небо через ущелье коньона">
+              </a>
+              <div class="product-card-content">
+              <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Amara Resort & Spa</h3>
               </a>
               <div>Гостиница</div>
@@ -147,11 +151,15 @@
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 8,5</div>
+              </div>
             </li>
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card-image-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-2.jpg" width="300" height="211"
                   alt="Вид на горы в Villas at Poco Diablo">
+              </a>
+              <div class="product-card-content">
+              <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
               <div>Гостиница</div>
@@ -160,11 +168,15 @@
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 9,2</div>
+              </div>
             </li>
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card-image-link" href="#">
                 <img class="product-card-image" src="images/hotel-1-3.jpg" width="300" height="211"
                   alt="Вид на горы в Desert Quail Inn">
+              </a>
+              <div class="product-card-content">
+              <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
               <div>Гостиница</div>
@@ -173,11 +185,15 @@
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 6,9</div>
+              </div>
             </li>
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card-image-link" href="#">
                 <img class="product-card-image" src="images/hotel-1.jpg" width="300" height="211"
                   alt="Звездное небо и горы в GreenTree Inn">
+              </a>
+              <div class="product-card-content">
+              <a class="product-card-title-link" href="#">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
               <div>Гостиница</div>
@@ -186,8 +202,10 @@
               <a class="button-favourites" href="#">в избранное</a>
               <!-- Вернемся к этому блоку позже <div>звезды</div>-->
               <div class="rating">Рейтинг: 5,0</div>
+              </div>
             </li>
           </ul>
+        </div>
           <div class="page-pagination">
             <ul class="pagination">
               <li class="pagination-item">
