--- a/catalog.html
+++ b/catalog.html
@@ -277,8 +277,9 @@
           </section>
           <section class="logo-html">
             <h2 class="visually-hidden">Логотип</h2>
-            <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33"
-              alt="Логотип html-academy">
+            <a class="logo-html-link" href="https://htmlacademy.ru">
+              <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип html-academy">
+            </a>
           </section>
         </div>
       </footer>
