--- a/catalog.html
+++ b/catalog.html
@@ -258,15 +258,15 @@
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy"></a>
+                <a class="footer-social-link footer-social-vk" href="https://vk.com/htmlacademy"></a>
                 <span class="visually-hidden">Vkontakte</span>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy"></a>
+                <a class="footer-social-link footer-social-tg" href="https://t.me/htmlacademy"></a>
                 <span class="visually-hidden">Telegram</span>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+                <a class="footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru"></a>
                 <span class="visually-hidden">Youtube</span>
               </li>
             </ul>
