--- a/7/index.html
+++ b/7/index.html
@@ -30,15 +30,24 @@
             <li class="navigation-item">
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Поиск</span>
+                <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="19" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m18.159 17.05-3.711-3.7c1.003-1.3 1.705-3 1.705-4.9 0-4.4-3.61-8-8.023-8C3.718.45.107 4.15.107 8.55c0 4.4 3.61 8 8.023 8 1.805 0 3.51-.6 4.914-1.7l3.71 3.7 1.404-1.5ZM8.13 14.55c-3.31 0-6.017-2.7-6.017-6s2.708-6 6.017-6c3.31 0 6.017 2.7 6.017 6s-2.707 6-6.017 6Z" fill="#000"/>
+                </svg>
               </a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
                 <span class="visually-hidden">Избранное</span>
+                <div class="navigation-link-favorite">
+                  <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z" fill="black"/>
+                  </svg>
+                  <span class="favorite-numbe">13</span>
+                </div>
               </a>
             </li>
             <li class="navigation-item">
-              <a class="button" href="#">Хочу сюда</a>
+              <a class="button-user" href="#">Хочу сюда</a>
             </li>
           </ul>
         </nav>
@@ -143,15 +152,15 @@
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a class="button" href="https://vk.com/htmlacademy"></a>
+                <a class="footer-social-link footer-social-vk" href="https://vk.com/htmlacademy"></a>
                 <span class="visually-hidden">Vkontakte</span>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://t.me/htmlacademy"></a>
+                <a class="footer-social-link footer-social-tg" href="https://t.me/htmlacademy"></a>
                 <span class="visually-hidden">Telegram</span>
               </li>
               <li class="footer-social-item">
-                <a class="button" href="https://www.youtube.com/user/htmlacademyru"></a>
+                <a class="footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru"></a>
                 <span class="visually-hidden">Youtube</span>
               </li>
             </ul>
@@ -162,8 +171,9 @@
           </section>
           <section class="logo-html">
             <h2 class="visually-hidden">Логотип</h2>
-            <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33"
-              alt="Логотип html-academy">
+            <a class="logo-html-link" href="https://htmlacademy.ru">
+              <img class="footer-logo" src="images/logo-html-academy.svg" width="115" height="33" alt="Логотип html-academy">
+            </a>
           </section>
         </div>
       </footer>
