--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
-              <li class="advantages-item color-bloc">
+              <li class="advantages-item color-block">
                 <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
                 <div class="advantages-numb">— №3 —</div>
                 <div class="advantages-description description-square">Все достопримечательности<br>находятся очень
@@ -119,7 +119,7 @@
                 <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!
                 </div>
               </li>
-              <li class="advantages-item color-bloc">
+              <li class="advantages-item color-block">
                 <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
                 <div class="advantages-numb">— №5 —</div>
                 <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там
