--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.57663 17C9.27578 17 8.97493 16.9 8.77436 16.6C3.35903 10.5 2.05534 9.1 1.75449 8.7C1.0525 7.8 0.651367 6.6 0.651367 5.4C0.651367 2.4 3.05818 0 6.16698 0C7.47067 0 8.67407 0.5 9.67691 1.3C10.6797 0.5 11.9834 0 13.1868 0C16.1954 0 18.7025 2.4 18.7025 5.4C18.7025 6.7 18.201 7.9 17.3988 8.8L10.3789 16.7C10.1783 16.9 9.97776 17 9.57663 17ZM3.5596 7.5C3.86045 7.9 7.06953 11.5 9.67691 14.4L15.8945 7.4C16.3959 6.9 16.5965 6.2 16.5965 5.4C16.5965 3.6 15.0922 2.1 13.2871 2.1C12.2843 2.1 11.2815 2.6 10.5795 3.4C10.2786 3.7 9.97776 3.8 9.67691 3.8C9.37606 3.8 9.07521 3.6 8.87464 3.4C8.17265 2.6 7.16982 2.1 6.16698 2.1C4.36187 2.1 2.85761 3.6 2.85761 5.4C2.75733 6.3 3.15846 7 3.5596 7.5C3.45931 7.5 3.45931 7.5 3.5596 7.5Z" fill="black"/>
                   </svg>
-                  <span class="favorite-numbe">13</span>
+                  <span class="favorite-numbe">12</span>
                 </div>
               </a>
             </li>
@@ -66,64 +66,75 @@
               <li class="advantages-item advantages-img">
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Настоящий<br>городок</h3>
-                  <b clsss="advantages-numb">— №1 —</b>
-                  <p class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</p>
+                  <div class="advantages-numb">— №1 —</div>
+                  <div class=”advantages-description”>Седона — не аттракцион для<br>туристов, там течёт своя жизнь</div>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/sedona-photo-1.jpg" width="800" height="384" alt="Город Седона">
                 </div>
               </li>
               <li class="advantages-item color-block">
+                <div class="container-advantages container-advantages-icon">
                 <div class="advantages-item-image">
                   <img class="image" src="images/home-icons.svg" width="75" height="72" alt="Дом">
                 </div>
-                <div class="advantages-item-title advantages-city">Жильё</div>
+                <h3 class="advantages-item-title advantages-city">Жильё</h3>
                 <div class="advantages-description description-city">Рекомендуем пожить в настоящем мотеле, всё как в
                   кино!</div>
+                </div>
               </li>
               <li class="advantages-item">
+                <div class="container-advantages container-advantages-icon">
                 <div class="advantages-item-image">
                   <img class="image" src="images/food-icons.svg" width="74" height="70" alt="Бургер">
                 </div>
-                <div class="advantages-item-title advantages-city">Еда</div>
-                <div class="advantages-description description-city">Всегда заказывайте топовый фирменный бургер, вы не
+                <h3 class="advantages-item-title advantages-city">Еда</h3>
+                <div class="advantages-description description-city">Всегда заказывайте<br>топовый фирменный бургер, вы не
                   разочаруетесь!</div>
+                </div>
               </li>
               <li class="advantages-item color-block">
+                <div class="container-advantages container-advantages-icon">
                 <div class="advantages-item-image">
                   <img class="image" src="images/souvenirs-icons.svg" width="64" height="76" alt="Подарок">
                 </div>
-                <div class="advantages-item-title advantages-city">Сувениры</div>
-                <div class="advantages-description description-city">Не только китайского, но и настоящего местного
+                <h3 class="advantages-item-title advantages-city">Сувениры</h3>
+                <div class="advantages-description description-city">Не только китайского,<br>но и настоящего местного
                   производства!</div>
+                </div>
               </li>
               <li class="advantages-item advantages-img advantages-row-reverse">
                 <div class="container-advantages">
                   <h3 class="advantages-item-title">Там есть<br>мост дьявола</h3>
-                  <b class="advantages-numb">— №2 —</b>
-                  <p class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</p>
+                  <div class="advantages-numb">— №2 —</div>
+                  <div class=”advantages-description”>Да, по нему можно пройти!<br>Если вы осмелитесь, разумеется</div>
                 </div>
                 <div class="advantages-image-city">
                   <img class="image" src="images/cognac-photo-2.jpg" width="800" height="384" alt="Коньон">
                 </div>
               </li>
               <li class="advantages-item color-block">
-                <div class="advantages-item-title advantages-content">Небольшая<br>площадь</div>
+                <div class="container-advantages container-advantages-numb">
+                <div class="advantages-item-title">Небольшая<br>площадь</div>
                 <div class="advantages-numb">— №3 —</div>
-                <div class="advantages-description description-square">Все достопримечательности<br>находятся очень
+                <div class="advantages-description">Все достопримечательности<br>находятся очень
                   близко</div>
+                </div>
               </li>
               <li class="advantages-item color-road">
-                <div class="advantages-item-title advantages-content">Красивая<br>дорога</div>
+                <div class="container-advantages container-advantages-numb">
+                <div class="advantages-item-title">Красивая<br>дорога</div>
                 <div class="advantages-numb">— №4 —</div>
-                <div class="advantages-description description-square">Ехать в Седону из Лас-Вегаса<br>совсем не скучно!
-                </div>
+                <div class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</div>
+              </div>
               </li>
               <li class="advantages-item color-block">
-                <div class="advantages-item-title advantages-content">Мало<br>туристов</div>
+                <div class="container-advantages container-advantages-numb">
+                <div class="advantages-item-title">Мало<br>туристов</div>
                 <div class="advantages-numb">— №5 —</div>
-                <div class="advantages-description description-square">Большинство едет в Гранд<br>Каньон и толпится там
+                <div class="advantages-description">Большинство едет в Гранд<br>Каньон и толпится там
                 </div>
+              </div>
               </li>
             </ul>
           </section>
